system_prog lab7 done [13.12.21]

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ methods/cw/.idea/
 graph/lab13/.idea/
 
 graph/lab6/.idea/
+/pringe/lab_java/target/
+
+systemProg/lab7.rar
+
+systemProg/lab7_2.rar
+
+pringe/lab10.rar
