--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,11 @@ systemProg/lab7_2.rar
 pringe/lab10.rar
 
 graph/lab8/.idea/
+
+ABC/lab2(2)_cl/.idea/
+
+ABC/lab2(2)_cl/cmake-build-debug/CMakeFiles/
+
+ABC/lab2(2)_cl/cmake-build-debug/
+
+ABC/lab3/cmake-build-debug/
